{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 67,
  "lineage": "891306ae-155c-bcda-205f-be29ada6b4d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tharun",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eac9b80bc828d81b",
            "arn": "arn:aws:ec2:eu-north-1:321652031768:elastic-ip/eipalloc-0eac9b80bc828d81b",
            "association_id": "eipassoc-00ba28c18883ee63a",
            "domain": "vpc",
            "id": "eipalloc-0eac9b80bc828d81b",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-01cbff64375b23be9",
            "private_dns": "ip-10-0-2-65.eu-north-1.compute.internal",
            "private_ip": "10.0.2.65",
            "public_dns": "ec2-13-61-137-160.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.137.160",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "Name": "t-eip"
            },
            "tags_all": {
              "Name": "t-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tharun",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fa91bc90632c73c9",
            "arn": "arn:aws:ec2:eu-north-1:321652031768:instance/i-0d816f126c3aa65ee",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d816f126c3aa65ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tharun-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e0ab49ca41eab2eb"
              }
            ],
            "primary_network_interface_id": "eni-0e0ab49ca41eab2eb",
            "private_dns": "ip-10-0-1-136.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.136",
            "public_ip": "16.170.251.38",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-072134bcef87519af",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-007b994b429cf03a1",
            "tags": {
              "Name": "tharun"
            },
            "tags_all": {
              "Name": "tharun"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ececaa167b80f722"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "i-0d816f126c3aa65ee",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.t_sg",
            "aws_subnet.tharun_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tharun_pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fa91bc90632c73c9",
            "arn": "arn:aws:ec2:eu-north-1:321652031768:instance/i-0087b97fda841dfec",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0087b97fda841dfec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tharun-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-002ee58319bdabf59"
              }
            ],
            "primary_network_interface_id": "eni-002ee58319bdabf59",
            "private_dns": "ip-10-0-2-119.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.119",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0078fc2bb2bc2317a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0319c78b12af319ee",
            "tags": {
              "Name": "tharun_pvt"
            },
            "tags_all": {
              "Name": "tharun_pvt"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ececaa167b80f722"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "i-0087b97fda841dfec",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.t_sg",
            "aws_subnet.tharun_private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:321652031768:internet-gateway/igw-0f3b93d906b404231",
            "id": "igw-0f3b93d906b404231",
            "owner_id": "321652031768",
            "region": "eu-north-1",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-03fdc00f542d806bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tharun",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eac9b80bc828d81b",
            "association_id": "eipassoc-00ba28c18883ee63a",
            "connectivity_type": "public",
            "id": "nat-0c311afdffa1abbde",
            "network_interface_id": "eni-01cbff64375b23be9",
            "private_ip": "10.0.2.65",
            "public_ip": "13.61.137.160",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0319c78b12af319ee",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.tharun",
            "aws_subnet.tharun_private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tharun_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:321652031768:route-table/rtb-0782483995e5bb2b6",
            "id": "rtb-0782483995e5bb2b6",
            "owner_id": "321652031768",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c311afdffa1abbde",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tharun_private"
            },
            "tags_all": {
              "Name": "tharun_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fdc00f542d806bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "rtb-0782483995e5bb2b6",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.tharun",
            "aws_nat_gateway.tharun",
            "aws_subnet.tharun_private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tharun_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:321652031768:route-table/rtb-02acbaf3e76305d29",
            "id": "rtb-02acbaf3e76305d29",
            "owner_id": "321652031768",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f3b93d906b404231",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tharun_public"
            },
            "tags_all": {
              "Name": "tharun_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fdc00f542d806bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "rtb-02acbaf3e76305d29",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbf09fc81d90e80d",
            "region": "eu-north-1",
            "route_table_id": "rtb-0782483995e5bb2b6",
            "subnet_id": "subnet-0319c78b12af319ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.tharun",
            "aws_nat_gateway.tharun",
            "aws_route_table.tharun_private",
            "aws_subnet.tharun_private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0768372df164f46ad",
            "region": "eu-north-1",
            "route_table_id": "rtb-02acbaf3e76305d29",
            "subnet_id": "subnet-007b994b429cf03a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.tharun_public",
            "aws_subnet.tharun_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "t_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:321652031768:security-group/sg-0ececaa167b80f722",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ececaa167b80f722",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "t_sg",
            "name_prefix": "",
            "owner_id": "321652031768",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "t_sg"
            },
            "tags_all": {
              "Name": "t_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fdc00f542d806bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "sg-0ececaa167b80f722",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tharun_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:321652031768:subnet/subnet-0319c78b12af319ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0319c78b12af319ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321652031768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "private subnet"
            },
            "tags_all": {
              "Name": "private subnet"
            },
            "vpc_id": "vpc-03fdc00f542d806bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "subnet-0319c78b12af319ee",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tharun_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:321652031768:subnet/subnet-007b994b429cf03a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007b994b429cf03a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321652031768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "public subnet"
            },
            "tags_all": {
              "Name": "public subnet"
            },
            "vpc_id": "vpc-03fdc00f542d806bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "subnet-007b994b429cf03a1",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:321652031768:vpc/vpc-03fdc00f542d806bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07fdc833a9182ac6d",
            "default_route_table_id": "rtb-0ba6dd9693a25776b",
            "default_security_group_id": "sg-0a12e35de5d34ab9c",
            "dhcp_options_id": "dopt-0ae9db196ad1a105f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03fdc00f542d806bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba6dd9693a25776b",
            "owner_id": "321652031768",
            "region": "eu-north-1",
            "tags": {
              "Name": "tharun-vpc"
            },
            "tags_all": {
              "Name": "tharun-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "321652031768",
            "id": "vpc-03fdc00f542d806bb",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}